# pythonProject

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
project-app/: .env.test-this-project  .env.this-project  main.py
project-app/alembic/: env.py
project-app/alembic/versions/: 2024_06_29_1941-9b24ada5b48c_init_2.py  2024_07_16_0927-29bb7096697c_init_1.py
project-app/apps/: __init__.py
project-app/apps/app_users/: __init__.py
project-app/apps/app_users/api/: __init__.py  users.py
project-app/apps/app_users/crud/: __init__.py  users.py
project-app/apps/app_users/models/: __init__.py  users.py
project-app/apps/app_users/schemas/: __init__.py  users.py
project-app/core/db/: __init__.py  helper.py
project-app/core/db/model/: base.py
project-app/core/db/utils/: __init__.py
project-app/core/router/: __init__.py
project-app/core/settings/: __init__.py  app_config.py
project-app/tests/: conftest.py  test_first.py  test_users.py
project-app/tests/app_users_test/: crud_users_test.py
